--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <link rel="stylesheet" href="css/buttonsGrid.css" type="text/css">
-        <title>Buttons Grid</title>
-    </head>
-    <body>
-        <h1>Sliding Puzzle</h1>
-        <div id="btns">
-        </div>
-        <script src="js/buttonsGrid.js" type="text/javascript"></script>
-    </body>
+<head>
+    <meta charset='utf-8'>
+    <title>Sliding Puzzle</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
+</head>
+<body>
+    <h1>Sliding Puzzle</h1>
+    <div id="btns">
+    </div>
+    <script src="js/main.js" type="text/javascript"></script>
+</body>
 </html>
